# plot-oxide

./: .gitignore  BUILD_VERIFICATION.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  LICENSE  PERFORMANCE_ROADMAP.md  PERF_IMPLEMENTATION.md  README.md  TASKS.md  create_parquet.rs
src/: app.rs  constants.rs  error.rs  lod.rs  lttb_cache.rs  main.rs  perf.rs
src/data/: mod.rs  source.rs  stats.rs
src/perf/: cache.rs  downsample.rs  mod.rs  worker.rs
src/state/: filters.rs  mod.rs  spc.rs  ui.rs  view.rs
src/ui/: data_table.rs  help_dialog.rs  mod.rs  plot.rs  series_panel.rs  stats_panel.rs  toolbar.rs
src/widgets/: filter_controls.rs  mod.rs  range_input.rs  spc_controls.rs
test-data/: README.md  sample_large.csv  sample_multi_series.csv  sample_spc.csv  sample_timeseries.csv
