[package]
name = "plot-oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", features = ["default_fonts"] }
egui = "0.33"
egui_plot = "0.34"
egui_extras = { version = "0.33", features = ["serde"] }
csv = "1.1"
rfd = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

