[package]
name = "plot-oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", features = ["default_fonts"] }
egui = "0.33"
egui_plot = "0.34"
egui_extras = { version = "0.33", features = ["serde"] }
polars = { version = "0.46", features = ["lazy", "parquet", "csv", "temporal", "dtype-datetime"] }
rfd = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Performance profiling via the unified `profiling` crate
# This abstracts over puffin, tracy, optick, etc.
profiling = "1.0"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
# Enable puffin profiling backend (use with puffin_viewer externally)
profile-with-puffin = ["profiling/profile-with-puffin"]
# Enable tracy profiling backend (use with tracy profiler)
profile-with-tracy = ["profiling/profile-with-tracy"]
